Fix Header and code example spacing bug
Use of negative margin led to inconsitencies in browsers
Replaced flexbox with sime text-align approach
Couple more tweaks and fixes

--- a/_sass/_landing-page.sass
+++ b/_sass/_landing-page.sass
@@ -16,24 +16,25 @@
 #sinatra-joke
   +media(max-width 1180px)
     display: none
-  display: flex
-  justify-content: center
-  align-items: center
   background-color: rgba(#FBFBFB, 0.0)
   margin:
     top: 0px
     bottom: 0px
   span
-    font-family: anonymous_proregular, $helvetica
     letter-spacing: -1px
 
+pre#sinatra-joke
+  padding: 0em
+
 #sinatra-syntax
+  display: inline-block
+  text-align: left
   +media(max-width 1180px)
     display: none
-  display: block
-  margin:
-    top: -14em
-    left: -80px
+  font-family: anonymous_proregular, $helvetica
+
+#syntax-wrapper
+  text-align: center
 
 // Code block syntax highlight colors
 
@@ -56,10 +57,9 @@
   +media(max-width 1180px)
     display: none
   margin:
-    left: 83px
-  margin:
-    bottom: 55px
-  font-size: 4.5em
+    top: 0.9em
+  text-align: center
+  font-size: 7.2em
   color: #585551
   font-family: anonymous_proregular, $helvetica
   letter-spacing: 2px
